--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "warehouse",
+  "name": "google-sheets-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PiotrAdamski8888.github.io/warehouse",
+  "homepage": "https://PiotrAdamski8888.github.io/google-sheets-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
